Fixed alignment

--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -445,48 +445,6 @@ button:hover {
     color: #4a4a4a;
 }
 
-.service-item .service-icon {
-    width: 70px;
-    height: 70px;
-    display: inline-block;
-    margin-bottom: 30px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    transition: all 0.5s;
-}
-
-.service-item .first-service-icon {
-    background-image: url(../images/first-white-icon.png);
-}
-
-.service-item:hover .first-service-icon {
-    background-image: url(../images/first-main-icon.png);
-}
-
-.service-item .second-service-icon {
-    background-image: url(../images/second-white-icon.png);
-}
-
-.service-item:hover .second-service-icon {
-    background-image: url(../images/second-main-icon.png);
-}
-
-.service-item .third-service-icon {
-    background-image: url(../images/third-white-icon.png);
-}
-
-.service-item:hover .third-service-icon {
-    background-image: url(../images/third-main-icon.png);
-}
-
-.service-item .fourth-service-icon {
-    background-image: url(../images/fourth-white-icon.png);
-}
-
-.service-item:hover .fourth-service-icon {
-    background-image: url(../images/fourth-main-icon.png);
-}
-
 
 /* My Work */
 
